fix some spacing

--- a/public/styles.css
+++ b/public/styles.css
@@ -798,6 +798,7 @@ footer a:hover {
   }
 
   .fun-facts {
+    margin-top: 50px;
     font-size: 48px;
   }
 
@@ -1121,6 +1122,7 @@ footer a:hover {
   }
 
   .fun-facts {
+    margin-top: 25px;
     font-size: 36px;
   }
 
